test/cases/compile_errors/extern_function_with_unspecified_calling_convention.zig
const Foo = extern struct {
    f: *const fn () void,
};

export fn entry() void {
    _ = (Foo{}).f;
}

// error
// backend=stage2
// target=native
//
// :2:8: error: extern structs cannot contain fields of type '*const fn () void'
// :2:8: note: extern function must specify calling convention
